--- a/.github/workflows/horusec.yml
+++ b/.github/workflows/horusec.yml
@@ -1,6 +1,6 @@
 name: SecurityPipeline
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   horusec-security:
@@ -12,4 +12,4 @@ jobs:
     - name: Running Horusec Security
       run: |
         curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
-        horusec start -p="./" -e="false"
+        horusec start -p="./" -e="true"
